--- a/Profile Page/index.html
+++ b/Profile Page/index.html
@@ -20,5 +20,69 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="colLeft take2">
+            <div class="header gray">
+                <div class="boxTitle blue"></div>
+                <img class="lrgProfilePic" src="./1614265160__images/images/jane-m.jpg" alt="jane profile image">
+                <h1>Jane Doe</h1>
+                <img class="iconLocation" src="./1614282895__icons/icons/map-marker.png" alt="location icon"><h3>Seattle</h3>
+                <p>Developr | Engineer | Problem Solver <br> Master of shadows and the Internet! </p>
+                <img class="icon" src="./1614282895__icons/icons/gear.png" alt="gear icon" > <a href="#">edit profile</a>
+            </div>
+            <div class="education gray">
+                <div class="boxTitle">
+                    <h3>Education</h3>
+                </div>
+                <h2>Coding Dojo - Full Stack Bootcamp</h2>
+                <h3>Dec 2019 - Mar 2020</h3>
+                <h3>Triple black belt in Python, MERN, and C#...</h3>
+            </div>
+        </div>
+        <div class="colRight take1">
+            <div class="requests gray">
+                <div class="boxTitle">
+                    <h3>2  Connection Requests</h3>
+                </div>
+                <div class="userProfile">
+                    <img class="smProfilePic" src="./1614265160__images/images/todd-s.jpg" alt="todd e">
+                    <h3>Todd E</h3>
+                    <img class="profileIcon" src="./1614282895__icons/icons/accept-circle.png" alt="accept icon">
+                    <img class="profileIcon" src="./1614282895__icons/icons/close-circle.png" alt="deny icon">
+                </div>
+                <div class="userProfile">
+                    <img class="smProfilePic" src="./1614265160__images/images/phil-s.jpg" alt="phil k">
+                    <h3>Phil K</h3>
+                    <img class="profileIcon" src="./1614282895__icons/icons/accept-circle.png" alt="accept icon">
+                    <img class="profileIcon" src="./1614282895__icons/icons/close-circle.png" alt="deny icon">
+                </div>
+            </div>
+            <div class="connections gray">
+                <div class="boxTitle">
+                    <h3>500+  Your Connections</h3>
+                </div>
+                <div class="userProfile">
+                    <img class="smProfilePic" src="./1614265160__images/images/adrien-s.jpg" alt="adrien d">
+                    <h3>Adrien D</h3>
+                </div>
+                <div class="userProfile">
+                    <img class="smProfilePic" src="./1614265160__images/images/anne-s.jpg" alt="anne j">
+                    <h3>Anne J</h3>
+                </div>
+                <div class="userProfile">
+                    <img class="smProfilePic" src="./1614265160__images/images/alayne-s.jpg" alt="alayne t">
+                    <h3>Alayne T</h3>
+                </div>
+                <div class="userProfile">
+                    <img class="smProfilePic" src="./1614265160__images/images/arry-s.jpg" alt="arry y">
+                    <h3>Arry Y</h3>
+                </div>
+                <div class="viewMore blueUndLine">
+                    <a href="#">View More</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
