--- a/Profile Page/index.html
+++ b/Profile Page/index.html
@@ -35,7 +35,7 @@
                     <h3>Education</h3>
                 </div>
                 <h2>Coding Dojo - Full Stack Bootcamp</h2>
-                <h3>Dec 2019 - Mar 2020</h3>
+                <h3><span>Dec 2019 - Mar 2020</span></h3>
                 <h3>Triple black belt in Python, MERN, and C#...</h3>
             </div>
         </div>
